--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,4 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: HF_API_KEY
-        value: your_huggingface_token_here
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
